@@ -1,3 +1,12 @@
+2005-08-18    <Daddy@C-3PO>
+
+	* lib/WWW/Search/Ebay/Stores.pm (columns): damn ebay.com changed the column order again
+
+	* lib/WWW/Search/Ebay.pm (columns): damn ebay.com changed the column order again
+	(parse_price): watch for running off the end of the Stores list
+
+	* lib/WWW/Search/Ebay/BuyItNow.pm (columns): damn ebay.com changed the column order again
+
 2005-08-16    <Daddy@C-3PO>
 
 	* lib/WWW/Search/Ebay.pm: new flexible way of parsing table cells in a backend-specific order!
